# python-playwright-automation

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: test-automation-new.yml  test-automation.yml
15/: index.html
16/: index.html
17/export/: influxDbData.txt
24/: index.html
26/data/: packages.json  suites.csv
26/export/: prometheusData.txt
26/widgets/: duration.json
27/: index.html
27/data/: behaviors.json  packages.json  suites.csv  timeline.json
27/export/: influxDbData.txt  prometheusData.txt
27/widgets/: summary.json
latest/data/: packages.json  timeline.json
latest/widgets/: suites.json
pages/: __init__.py  activity_page.py  base_page.py  bill_payment_page.py  find_transactions_page.py  home_page.py  open_account_page.py  overview_page.py  request_loan_page.py  transfer_page.py  update_profile_page.py
pages/components/: __init__.py  customer_login.py  left_navigation_panel.py
reports/17/: index.html
reports/26/: index.html
reports/28/: index.html
reports/29/: index.html
reports/31/: index.html
reports/32/: index.html
reports/33/: index.html
reports/34/: index.html
reports/35/: index.html
reports/36/: index.html
reports/37/: index.html
reports/38/: index.html
reports/39/: index.html
reports/latest/: index.html
src/clients/: parabank_api_client.py
src/enums/: account_types.py  transaction_types.py
src/schemas/: parabank_schemas.py
src/services/: response_validation_service.py
src/utils/: currency_utils.py  encoding_utils.py  schema_validator.py
(+340 files in other folders)
