[project]
name = "demo-banking-website"
version = "0.1.0"
description = ""
authors = [
    {name = "TimurSamatov",email = "cooool.loki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "playwright (>=1.57.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "requests (>=2.32.5,<3.0.0)",
    "allure-pytest (>=2.15.2,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
